hphp/hack/test/typecheck/shape/disable_optional_and_unknown_shape_fields/shape_structural_subtyping_with_nullable_and_optional_and_required_types.php
<?hh // strict

// Only the unprovided 'b' should produce an error.
// The unprovided 'a' should not produce an error.
type ShapeWithOptionalNullableAndRequiredFields = shape(
  ?'a' => int,
  'b' => int,
  'c' => ?int,
);

function foo(ShapeWithOptionalNullableAndRequiredFields $argument): void {}

function bar(): void {
  foo(shape());
}
